--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@
     width: 100%;
     height: 550px;
     background-color: #E554731A;
-    display: flex;
-   justify-content: space-around;
-   align-items: center;
+    
 
 }
 h1{
@@ -43,20 +41,103 @@ h1{
 
 .img_01{
     height: 500px;
-    margin-bottom: -55px;
+    
+    
 }
 .left-div_header{
     padding: 10px;
-    width: 100%;
+    
     text-align: justify;
-    margin-left: 100px;
-    margin-top: 50px;
+    
 }
 
 .right-div_header{
-    padding: 10px;
-    width: 100%;
+   
     text-align: center;
+   
+}
+.header_container{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0px auto;
+    padding-top: 48px;
 }
 
 /* header starsts here ends here */
+
+
+
+
+
+/* feature section starts here */
+
+
+
+.feature_container h1{
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'Lato', sans-serif;
+}
+
+.feature_container p{
+    text-align: center;
+    font-size: 14px;
+    color: #27272799;
+    
+}
+
+.feature_container{
+    margin: 100px 0px 50px 0px;
+}
+
+
+
+.img_02{
+    width: 150px;
+    height:150px;
+    padding: 30px;
+    margin: 20px;
+
+}
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+}
+.center_01{
+    text-align: center;
+    
+}
+.center_02{
+    text-align: center;
+}
+.center_03{
+    text-align: center;
+}
+
+.first-div{
+       background-color: #A7216226;
+       margin: 20px;
+}
+.second-div{
+    background-color: #0597A026;
+
+}
+.third-div{
+    background-color: #477D1126;
+}
+.margin{
+    margin: 5px;
+}
+.border-radius{
+    border-radius:50% 50% 0 0;
+}
+.heading-05{
+    margin-top: 30px;
+   text-decoration: underline;
+}
+/* feature section starts here */
