--- a/style.css
+++ b/style.css
@@ -141,3 +141,41 @@ h1{
    text-decoration: underline;
 }
 /* feature section starts here */
+
+
+
+
+
+
+
+/* service section starts here */
+
+.section_02{
+    width: 58%;
+    margin: 0 auto;
+}
+.service_container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #2727270D;
+    align-items: center;
+    height: 150px;
+
+}
+.center__02{
+    text-align: center;
+}
+
+.img_03{
+    margin-bottom: 10px;
+    width: 50px;
+    height: 50px;
+}
+
+.service_container p{
+    color: #272727CC;
+}
+
+
+/* service section ends here */
