--- a/style.css
+++ b/style.css
@@ -176,6 +176,60 @@ h1{
 .service_container p{
     color: #272727CC;
 }
-
-
 /* service section ends here */
+
+
+
+
+
+/* signup section starts here */
+
+.signup_bg{
+    margin-top: 170px;
+    width: 100%;
+    height: 500px;
+    background-color: #E554730D;
+}
+
+.signup_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+}
+
+.img_04{
+    width: 200px;
+    height: 300px;
+}
+.heading-02{
+    font-size: 30px;
+    color: #272727;
+}
+
+.pera_01{
+    text-align: center;
+    color: #27272799;
+}
+.btn_01{
+    padding: 10px;
+    color: white;
+    background-color:#E55473;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    margin: 20px;
+}
+
+.btn_01-01{
+    text-align: center;
+}
+
+.left-div_03{
+    margin-left: 20px;
+}
+.right-div_03{
+    margin-left: 150px;
+}
+
+/* signup section starts here */
