--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ h1{
 /* signup section starts here */
 
 .signup_bg{
-    margin-top: 170px;
+    margin-top: 100px;
     width: 100%;
     height: 500px;
     background-color: #E554730D;
@@ -233,3 +233,36 @@ h1{
 }
 
 /* signup section starts here */
+
+
+
+
+
+/* instagram section starts here */
+.img_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img_06{
+    height: 200px;
+    width: 200px;
+    margin: 15px;
+}
+.center_04{
+    text-align: center;
+}
+.instragram_heading{
+    color: #272727;
+}
+
+.pera_02{
+    color:#27272799 ;
+}
+
+.instagram_container{
+    margin-top: 100px;
+}
+
+/* instagram section starts here */
